[workspace]
members = [
    "swf",
]
resolver = "2"

[workspace.package]
authors = ["Ruffle LLC <ruffle@ruffle.rs>"]
edition = "2021"
homepage = "https://ruffle.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruffle-rs/ruffle"
version = "0.1.0"

[workspace.dependencies]
bitflags = "2.5.0"
enum-map = "2.7.3"
flate2 = "1.0.30"
log = "0.4"
num-derive = "0.4.2"
num-traits = "0.2.19"

[workspace.lints.rust]
# Clippy nightly often adds new/buggy lints that we want to ignore.
# Don't warn about these new lints on stable.
renamed_and_removed_lints = "allow"
unknown_lints = "allow"

[workspace.lints.clippy]
# LONG-TERM: These lints are unhelpful.
manual_map = "allow"             # Less readable: Suggests `opt.map(..)` instsead of `if let Some(opt) { .. }`
manual_range_contains = "allow"  # Less readable: Suggests `(a..b).contains(n)` instead of `n >= a && n < b`
assigning_clones = "allow"       # Sometimes useful, but more often than not it doesn't do anything as
                                 # we overwrite an empty item. And sometimes it can even be a footgun
                                 # by keeping big allocations alive.

# Don't optimize build scripts and macros.
[profile.release.build-override]
opt-level = 0

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"

[profile.dev.package.h263-rs]
opt-level = 3

[profile.dev.package.h263-rs-yuv]
opt-level = 3

[profile.dev.package.nihav_core]
opt-level = 3

[profile.dev.package.nihav_codec_support]
opt-level = 3

[profile.dev.package.nihav_duck]
opt-level = 3

# TODO: Set rustflags here instead of in web/core/package.json, when that
# feature becomes stable. See: https://github.com/rust-lang/cargo/issues/10271
# Until then, these custom profiles let cargo keep the build cache alive
# across "dual-wasm" builds, separating it for the two .wasm modules.
[profile.web-vanilla-wasm]
inherits = "release"

[profile.web-wasm-extensions]
inherits = "release"

[profile.ci]
inherits = "release"
debug-assertions = true
overflow-checks = true
# "Not too slow to compile, fast enough to run."
opt-level = 2
# Takes too long, especially on Windows, with marginal benefit otherwise.
lto = "off"
# This is also set with higher authority in `test_rust.yml`.
incremental = true
# Right between the defaults of 16 and 256, for crate fragment caching.
codegen-units = 64
